styles/intro.css
#intro {
  width: 100%;
  display: block;
  margin-bottom: 2%;
}

#pronouns {
  font-size: 30px;
}

img.profile_pic {
  float: left;
  vertical-align: middle;
  border-radius: 10%;
  margin-right: 2%;
  width: 12%;
}

.profile {
  display: inline-block;
  float: left;
  margin-bottom: 2%;
  width: 86%;
  vertical-align: middle;
}

